[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/fonts/arcade_40.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Menu Scenes/Main_Menu_Teacher/GenerateReport.gd" type="Script" id=2]

[node name="Generate Report" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.25995
margin_top = 2.51984
margin_right = 1.26001
margin_bottom = 2.51984
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_gobackBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 155.748
margin_right = 112.0
margin_bottom = 224.748
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -294.0
margin_right = 294.0
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 588.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 536.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 1 )
text = "Generate   Report   Selection"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 588.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_selectW1Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 292.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "World 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GR_selectW2Btn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 588.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "World 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmGR" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = -71.0
margin_right = 207.5
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GR_gobackBtn" to="." method="_on_GR_gobackBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GR_selectW1Btn" to="." method="_on_GR_selectW1Btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GR_selectW2Btn" to="." method="_on_GR_selectW2Btn_pressed"]
[connection signal="about_to_show" from="ConfirmGR" to="." method="_on_ConfirmationDialog_about_to_show"]
[connection signal="confirmed" from="ConfirmGR" to="." method="_on_ConfirmationDialog_confirmed"]
